openshift/traefik-rbac.yaml
# Kubernetes 1.6+ introduces RBAC (Role Based Access Control)
# you may need to authorize Traefik to use the Kubernetes API
# using ClusterRole and ClusterRoleBinding
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-ingress
