openshift/test-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: whoami
  labels:
    app: test
    whoami: one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
      task: one
  template:
    metadata:
      labels:
        app: test
        task: one
        version: v0.0.1
    spec:
      containers:
      - name: whoaim
        image: emilevauge/whoami
        args:
        - port 8080
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
